apps/subarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:subarr.lab.emc2.build
    traefik.port: '5000'
  labels:
    app: subarr
  name: subarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: subarr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:subarr.lab.emc2.build
        traefik.port: '5000'
      labels:
        app: subarr
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        - name: PORT
          value: '5000'
        image: ghcr.io/derekantrican/subarr:latest
        imagePullPolicy: IfNotPresent
        name: subarr
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /config
          name: subarr-config
        - mountPath: /downloads
          name: media-library
      hostname: subarr
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 60
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
      - name: subarr-config
        persistentVolumeClaim:
          claimName: subarr-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
